# loooper

./: Cargo.toml  PIN.md  PLAN.md  README.md
src/: adsr.rs  audio.rs  blink.rs  button.rs  countin.rs  filter.rs  lib.rs  loops.rs  main.rs  prepare.rs  rolling.rs  setup.rs
src/audio/: callback.rs  mod.rs  notifications.rs  oscillator.rs  sample.rs
src/filter/: delay.rs  distortion.rs  mod.rs  reverb.rs  wa.rs
