[package]
name = "loooper"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
cpal = { version = "0.15.3", features = ["jack"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
