[package]
name = "loooper"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
jack = "0.13.2"
ratatui = "0.29.0"
ringbuf = "0.4.8"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
wiringpi = { git = "https://github.com/axos88/rust-wiringpi", version = "0.2.4" }
